--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,13 @@ Source: python-bleak
 Section: python
 Priority: optional
 Maintainer: Sebastien Laclau <seb.laclau@gmail.com>
-Build-Depends: python3-all, dh-python, debhelper-compat (= 13),
- python3-dbus-next
+Build-Depends:
+ dh-python,
+ debhelper-compat (= 13),
+ python3,
+ python3-async-timeout (>= 4.2.0),
+ python3-typing-extensions (>= 4.0.1),
+ python3-dbus-next (>= 0.2.2)
 
 Package: python3-bleak
 Architecture: any
