--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Get build dependencies
         run: |
           sudo apt-add-repository ppa:slaclau/ppa-pre
+          sudo apt update
           sudo apt install devscripts equivs
           sudo mk-build-deps -i -t "apt-get -o Debug::pkgProblemResolver=yes --no-install-recommends -y"
       - name: Build
