--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,9 @@ Build-Depends:
  dh-python,
  debhelper-compat (= 13),
  python3,
+ python3-setuptools,
  python3-async-timeout (>= 4.0.1),
- python3-dbus-next (>= 0.2.2)
+ python3-dbus-next (>= 0.2.2) 
 
 Package: python3-bleak
 Architecture: any
