--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Sebastien Laclau <seb.laclau@gmail.com>
 Build-Depends:
  dh-python,
  debhelper-compat (= 13),
- python3,
+ python3-all,
  python3-setuptools,
  python3-async-timeout (>= 4.0.1),
  python3-dbus-next (>= 0.2.2) 
